syntax = "proto3";

package exchange;

option java_multiple_files = false;
option java_package = "at.ac.uibk.dps.smartfactory.server";
option java_outer_classname = "ContextVariableProtos";

message ContextVariable {
  string name = 1;
  Value value = 2;
}

message ContextVariables {
  repeated ContextVariable data = 1;
}

message Value {
  oneof value {
    int32 integer = 1;
    float float = 2;
    int64 long = 3;
    double double = 4;
    string string = 5;
    bool bool = 6;
    bytes bytes = 7;
    ValueCollection array = 8;
    ValueCollection list = 9;
    ValueMap map = 10;
  }
}

message ValueCollection {
  repeated Value entry = 1;
}

message ValueMap {
  repeated ValueMapEntry entry = 1;
}

message ValueMapEntry {
  Value key = 1;
  Value value = 2;
}